# puffkit

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: commit_checks.yaml  coverage.yaml  pr_checks.yaml  release.yaml  test.yaml  update_depedencies.yaml
docs/: conf.py  index.rst  requirements.txt
docs/introduction/: getting_started.rst  installation.rst  tutorial.rst
docs/ref/: core.rst  index.rst  reference.rst
puffkit/: __init__.py  app.py  container.py  coordinate.py  object.py  rect.py  scene.py  subsurface.py  surface.py
puffkit/color/: __init__.py  color.py  palettes.py
puffkit/decorators/: timing.py
puffkit/event/: __init__.py  event.py  event_constants.py  event_manager.py
puffkit/font/: font.py  sysfont.py
puffkit/geometry/: coordinate.py  rect.py  size.py
puffkit/scene/: fallback_scene.py  scene.py  scene_manager.py
puffkit/widget/: __init__.py  button_widget.py  label_widget.py  text_input_widget.py  widget.py
src/puffkit/: __init__.py  app.py  container.py  object.py  subsurface.py  surface.py  textures.py
src/puffkit/color/: __init__.py  color.py  palettes.py
src/puffkit/event/: __init__.py  event.py
src/puffkit/font/: __init__.py  font.py  sysfont.py
src/puffkit/geometry/: __init__.py  coordinate.py  rect.py  size.py
src/puffkit/image/: __init__.py  image.py
src/puffkit/scene/: __init__.py  scene.py  scene_manager.py
src/puffkit/widget/: __init__.py  button_widget.py  image_widget.py  label_widget.py  text_input_widget.py  (+1 more)
tests/: test_app.py  test_container.py  test_coordinate.py  test_object.py  test_rect.py  test_scene.py  test_subsurface.py  test_surface.py  test_textures.py
tests/color/: test_color.py
tests/decorators/: test_timing.py
tests/event/: test_event.py  test_event_manager.py
tests/font/: test_font.py  test_sysfont.py
tests/geometry/: test_coordinate.py  test_rect.py  test_size.py
tests/image/: test_image.py
tests/scene/: test_fallback_scene.py  test_scene.py  test_scene_manager.py
tests/widget/: test_button_widget.py  test_image_widget.py  test_label_widget.py  test_text_input_widget.py  test_widget.py
