[build-system]
requires = ["uv_build>=0.7.15,<0.8.0"]
build-backend = "uv_build"

[project]
name = "puffkit"
version = "0.11.0-post.3"
description = "A pygame-ce based engine for application and game development."
authors = [
    {name = "Artur Borecki", email = "me@pufereq.pl"},
]
dependencies = [
    "pygame-ce>=2.5.1",
    "pyyaml>=6.0.2",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "LGPL-3.0-or-later"}

[dependency-groups]
bump = [
    "git-cliff>=2.9.1",
    "python-semantic-release>=10.2.0",
]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-github-actions-annotate-failures>=0.3.0",
]
lint = [
    "isort>=5.13.2",
    "ruff>=0.11.6",
]
docs = [
    "sphinx>=8.2.3",
    "furo>=2024.8.6",
]

[tool.ruff]
line-length = 79
exclude = [
    "tests/*"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 79

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.pytest.ini_options]
addopts = [
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=100",
]

[tool.coverage.run]
omit = [
    "src/puffkit/__init__.py",
    "examples/*",
    "docs/*",
    "tests/*",
]

[tool.semantic_release]
version_variables = ["src/puffkit/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
build_command_env = []
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "conventional"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = true
no_git_verify = false
tag_format = "{version}"

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0
